src/assets/styles/Input.module.css
.formDiv{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 25%;
    left: 37%;
    row-gap: 30px;
}

.contentDiv{
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: 30px;
}

.subtitle{
    font-size: 0.7rem;
    color: rgb(159, 159, 159);
    font-weight: 100;
}

.inputDiv{
    display: flex;
    flex-direction: column;
    align-items:flex-end;
    row-gap: 30px;
}

.tagInput{
    padding: 7px;
    background: none;
    border: none;
    border-bottom: solid 0.01rem;
    border-color:rgb(103, 103, 103);
}

.tagInput:focus{
    outline: none;
}

